add feed endpoint
