# src/routes/users/user.router.js
@@ -94,6 +94,18 @@ usersRouter.get('/:userId/watched-tags', keycloak.protect(), async (request, res
   response.send(bookmarks);
 });
 
+
+/* GET list of bookmarks for the user's feed */
+usersRouter.get('/:userId/feed', keycloak.protect(), async (request, response) => {
+  userIdTokenValidator.validateUserId(request);
+  const {page, limit} = PaginationQueryParamsHelper.getPageAndLimit(request);
+  const bookmarks = await UserDataService.getFeedBookmarks(request.params.userId, page, limit);
+
+  response.send(bookmarks);
+});
+
+
+
 /* GET list of used tag for the user */
 usersRouter.get('/:userId/used-tags', keycloak.protect(), async (request, response) => {
   userIdTokenValidator.validateUserId(request);
